--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <li>Technical support experience</li>
 <li>Management of Insurances</li>
 <li>Database administration (basic)</li>
-<li>Instructional designer curse></li>
+<li>Instructional designer curse</li>
 <li>HTML,CCSS,JavaScript</li>
 </ul>
 
