--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <li>Management of Insurances</li>
 <li>Database administration (basic)</li>
 <li>Instructional designer curse</li>
-<li>HTML,CCSS,JavaScript</li>
+<li>HTML - CSS - JavaScript</li>
 </ul>
 
 <hr/>
